# ChangeLog for dev-ruby/trollop
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jul 2008; Sven Schwyn (svoop) <gentoo@bitcetera.com>
  +trollop-1.8.2.ebuild, +metadata.xml:
  New ebuild dev-ruby/trollop for bug 232644
