@@ -1,4 +1,4 @@
 DIST trollop-1.8.2.gem 15360 RMD160 60b550aa5641538e4ea8c17b242c2dcf7db1c8c4 SHA1 15a369dee28c597eeac654e900c650c7ec0c2830 SHA256 1e83d7656e45b7772920098d0d0b294260653861a89166508c38ff183a7f30fc
-EBUILD trollop-1.8.2.ebuild 405 RMD160 3ae66dc33b229e1840bbfe69b4d647d13d11e0ff SHA1 e8c45f57e14195935ec28c1c02d31270c68693a6 SHA256 28156774b9594e9f9a656f942ccc296ebe9d1f0a59e7e63d9fa8b07ccea67d81
-MISC ChangeLog 261 RMD160 07f9d4f231b464f0a4a19e658ba18c89785f6ad2 SHA1 cdf88fa68173252b0fbe3906915b3f71e68f3e3e SHA256 fa10335a25f0b7b617f786c7a8336e69fad31b43b2161f7c80697b07eb166cf8
+EBUILD trollop-1.8.2.ebuild 358 RMD160 050e9e7802db9bd350bc4f8dfd2eefeb505ff173 SHA1 a2bfcb52eb5faf83d56240e3e6a212691d5238a8 SHA256 8415e62c536634b76b658830a6f231e5ffd2e3e9943df17ce1c990cd0952b54b
+MISC ChangeLog 405 RMD160 f5bdd044732957d22f06d72f7fbf60dbf40f9881 SHA1 b140a1d740d529cc61eb735d7ea35f4be9321f03 SHA256 05cbbde14b73c438a27ec0c300a72562c5d8d497b65149b888b81a4889270c7f
 MISC metadata.xml 623 RMD160 c53642d0b28c5ff7261ce20b39f72fdacc732379 SHA1 97e8550bfe25f24daf618151364ebf0629fd6ade SHA256 c112701c0409d7365c62748bf71ea48a0bf9614c2a28adc3fdad42c5f0074116
